# ocw_oer_export

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cli.py  create_csv.py  docker-compose.yml  main.py  ocw_oer_export.csv  pyproject.toml  requirements.txt  setup.cfg  setup.py  transformed_data.csv
.github/workflows/: python-unittest.yml  weekly_csv_release.yml
mapping_files/: ocw_topic_to_oer_subject.csv  ocw_topic_to_subtopics.json
ocw_oer_export/: __init__.py  client.py  config.py  constants.py  create_csv.py  create_json.py  data_handler.py  data_loader.py  transformed_data.csv
ocw_oer_export/mapping_files/: fm_keywords_export.csv  ocw_topic_to_oer_subject.csv
ocw_oer_export/utilities/: __init__.py  cleanup_curly_brackets.py  cleanup_empty_brackets.py  html_to_text.py  markdown_to_text.py  normalize_keywords.py  text_cleanup.py
private/output/: .gitkeep
tests/: expected_courses.csv  sample_courses.json  test.py  test_api_response.py  test_csv_creation_from_json.py  test_description_cleanup.py  test_keywords_cleanup.py  test_keywords_normalization.py
utilities/: cleanup_empty_brackets.py  html_to_text.py
