[tool.poetry]
name = "ocw_oer_export"
description = "A project to export MIT OpenCourseWare (OCW) courses' metadata to CSV format, compatible with OER Commons import requirements."
authors = ["MITODL"]
license = "BSD-3-Clause"
readme = "README.md"
version = "0.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
certifi = "2025.8.3"
cfgv = "3.4.0"
charset-normalizer = "3.4.3"
decorator = "5.2.1"
distlib = "0.4.0"
filelock = "3.18.0"
identify = "2.6.13"
idna = "3.10"
importlib-metadata = "8.7.0"
Markdown = "3.8.2"
nodeenv = "1.9.1"
platformdirs = "4.3.8"
pre-commit = "4.2.0"
py = "1.11.0"
python-dotenv = "^1.0.1"
PyYAML = "6.0.2"
requests = "2.32.4"
retry = "0.9.2"
titlecase = "2.4.1"
tqdm = "4.67.1"
urllib3 = "2.5.0"
virtualenv = "20.33.1"
zipp = "3.23.0"
