[metadata]
name = ocw_oer_export
version = 1.0.0
author = X
author_email = Y
description = My package description
long_description = file: README.md
long_description_content_type = text/markdown
url = package_url
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = ocw_oer_export
python_requires = >=3.7
install_requires =
install_requires =
    requests>=2.31.0
    retry>=0.9.2
    tqdm>=4.66.1
    Markdown>=3.5.1
packages = find:

[options.packages.find]
where = ocw_oer_export

[options.entry_points]
console_scripts =
    ocw-oer-export = ocw_oer_export.cli:main
